# voting_rest_api

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
lunch_voting/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
voting/: models.py  openapi_responses.py  serializers.py  utils.py
voting/migrations/: 0001_initial.py  0002_vote_description.py  0003_remove_vote_description.py  0004_vote_weight_vote_voting_vote_user_id_d468f5_idx.py  0005_rename_restaurant_vote_restaurant_id.py  0006_remove_vote_weight.py  0007_rename_restaurant_id_vote_restaurant.py  0008_remove_vote_voting_vote_user_id_d468f5_idx_and_more.py  0009_remove_vote_voting_vote_restaur_6509c0_idx_and_more.py  0010_remove_vote_voting_vote_user_id_7dac28_idx_and_more.py  0011_rename_voting_vote_created_4b1f74_idx_voting_vote_created_7157a3_idx_and_more.py  0012_rename_user_id_vote_user_and_more.py  0013_restaurant_voting_rest_created_81c1e8_idx.py  0014_remove_duplicate_restaurants.py  0015_alter_restaurant_name.py
voting/repositories/: restaurant.py  vote.py
voting/services/: vote.py  voting_stats.py
voting/tests/: test_register_api.py  test_restaurant_api.py  test_vote_api.py  test_vote_history_apy.py
voting/views/: register.py  restaurant.py  vote.py  voting.py
